fix font size of meidasite play button on mobile devices

--- a/app/styles/main-foundation.css
+++ b/app/styles/main-foundation.css
@@ -63,6 +63,9 @@ body {
     /*z-index: 1 !important; */
     box-shadow: 0px 0px 2px rgba(124, 124, 124, 0.7);
   }
+  .media_site_click_button_small_font{
+    font-size: x-small !important;
+  }
 }
 /*.header {
   padding:10px;
@@ -3153,6 +3156,9 @@ dd#second_accordion > a:hover{
   padding: 2%;
   padding-top:4%;
   font-weight: bold;
-  font-size: inherit;
+  font-size:inherit;
+  text-align: center;
   color: white;
+  vertical-align: middle;
+  border: solid; 
 }
